# RentEzBackEnd

./: .env  Pipfile  Project Structure.txt  README.md  RentEzRequests.py  pyproject.toml
app/: main.py
app/api/api_001/endpoints/: landlords.py
app/core/: config.py  security.py
app/crud/: landlord.py
src/: auth.py  config.py  crud.py  main.py  schemas.py
